--- a/src/webElems/webstyle.css
+++ b/src/webElems/webstyle.css
@@ -69,9 +69,11 @@ li a {
   padding: 8px 16px;
   text-decoration: none;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  border-style: solid;
-  border-width: 2px;
+  border-style: outset;
+  border-width: 3px;
   border-color: rgb(197, 196, 149);
+
+  border-radius: 10px;
 }
 
 /* flexbase code */
@@ -95,6 +97,7 @@ li a {
   
   .sidebar a{
     background-color: #AAAAAA;
+   
   }
 
     .sidebar a:hover{
