3 files modified, 1 added

--- a/src/webElems/webstyle.css
+++ b/src/webElems/webstyle.css
@@ -154,3 +154,9 @@ li a {
   display: flex;
   flex-direction: column;
 }
+
+Select{
+  display: flex;
+  height: 2em;
+  justify-contents: space-around;
+}
