--- a/src/webElems/webtemplate.css
+++ b/src/webElems/webtemplate.css
@@ -1,76 +1,115 @@
-
-
-.HeaderNav_Container{
-  position:fixed;
+.HeaderNav_Container {
+  position: fixed;
   height: 8%;
   width: 100vw;
+  left: 0;
   top: 0;
   display: flex;
   flex-direction: row;
-  
+
   background-color: #2c2c2c;
 }
 
-.HeaderNav_item1{
-
-  color: #EEEEEE;
+.HeaderNav_item1 {
+  color: #eeeeee;
   position: relative;
   display: flex;
-  
+
   height: 100%;
-  
+
   align-items: center;
-  width: 80%;
+  width: 100vw;
 }
 
-.HeaderNav_item2{
-
+.HeaderNav_item2 {
   position: relative;
   display: flex;
-  
+
   height: 100%;
   align-items: center;
-  
+
   width: 10%;
 }
 
-.burger_box{
+.burger_box {
   background-color: #999999;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  
-  padding: 3px; 
- 
+
+  padding: 3px;
 }
 
-.burger_box_active{
+.burger_box_active {
   background-color: rgb(43, 128, 255);
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  
-  padding: 3px; 
- 
+
+  padding: 3px;
 }
 
-.burger_top{
-  background-color: #EEEEEE;
+.burger_top {
+  background-color: #eeeeee;
   width: 30px;
   height: 3px;
   margin: 3px;
 }
 
-.burger_middle{
-  background-color: #EEEEEE;
+.burger_middle {
+  background-color: #eeeeee;
   width: 30px;
   height: 3px;
   margin: 3px;
 }
 
-.burger_bottom{
-  background-color: #EEEEEE;
+.burger_bottom {
+  background-color: #eeeeee;
   width: 30px;
   height: 3px;
   margin: 3px;
+}
+
+.NavLinksSidebar{
+  background-color: #2c2c2c;
+  position: fixed;
+  right: 0;
+  top: 8vh;
+  display: flex;
+  height: 92vh;
+  width: 30%;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+
+}
+
+.NavButton button{
+  outline: none;
+  display: inline-block;
+  border: none;
+  color: #eeeeee;
+  background-color: #7575757c;
+  padding:  7px 14px 7px 14px;
+  border-radius: 3px;
+  transition: 0.7s;
+}
+
+.NavButton button:hover{
+  display: inline-block;
+  border: none;
+  color: #eeeeee;
+  background-color: #7575757c;
+  padding:  10px 18px 10px 18px;
+  transition: 0.5s;
+}
+
+.NavButton button:active{
+  outline: none;
+  display: inline-block;
+  border: none;
+  color: #eeeeee;
+  background-color: #999999;
+  padding:  10px 18px 10px 18px;
+  transition: 0.2s;
 }
