--- a/src/webElems/webtemplate.css
+++ b/src/webElems/webtemplate.css
@@ -81,6 +81,22 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  transition: 0.5s;
+}
+
+.NavLinksSidebar_inactive{
+  background-color: #2c2c2c;
+  position: fixed;
+  right: 0;
+  top: 8vh;
+  display: flex;
+  height: 92vh;
+  width: 30%;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  transform: translateX(100%);
+
 
 }
 
