--- a/src/webElems/webtemplate.css
+++ b/src/webElems/webtemplate.css
@@ -1,135 +1,201 @@
 .HeaderNav_Container {
-  position: fixed;
-  height: 8%;
-  width: 100vw;
-  left: 0;
-  top: 0;
-  display: flex;
-  flex-direction: row;
-  
-  background-color: #2c2c2c;
+    position: fixed;
+    height: 8%;
+    width: 100vw;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    background-image: linear-gradient(to right, #4c4c4c, #2c2c2c);
+    z-index: 10;
 }
 
 .HeaderNav_item1 {
-  color: #eeeeee;
-  position: relative;
-  display: flex;
-
-  height: 100%;
-
-  align-items: center;
-  width: 100vw;
+    color: #eeeeee;
+    position: relative;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    width: 100vw;
 }
 
 .HeaderNav_item2 {
-  position: relative;
-  display: flex;
-
-  height: 100%;
-  align-items: center;
-
-  width: 10%;
+    position: relative;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    width: 10%;
 }
 
 .burger_box {
-  background-color: #88888871;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-
-  padding: 3px;
+    cursor: pointer;
+    background-color: #88888871;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    padding: 3px;
 }
 
 .burger_box_active {
-  background-color: #999999;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-
-  padding: 3px;
+    background-color: #999999;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    padding: 3px;
 }
 
 .burger_top {
-  background-color: #eeeeee;
-  width: 30px;
-  height: 3px;
-  margin: 3px;
+    background-color: #eeeeee;
+    width: 30px;
+    height: 3px;
+    margin: 3px;
 }
 
 .burger_middle {
-  background-color: #eeeeee;
-  width: 30px;
-  height: 3px;
-  margin: 3px;
+    background-color: #eeeeee;
+    width: 30px;
+    height: 3px;
+    margin: 3px;
 }
 
 .burger_bottom {
-  background-color: #eeeeee;
-  width: 30px;
-  height: 3px;
-  margin: 3px;
+    background-color: #eeeeee;
+    width: 30px;
+    height: 3px;
+    margin: 3px;
 }
 
-
-.NavLinksSidebar{
-  background-color: #2c2c2c;
-  position: fixed;
-  right: 0;
-  top: 8vh;
-  display: flex;
-  height: 92vh;
-  width: 30%;  
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  transition: 0.7s;
-
+.NavLinksSidebar {
+    background-image: linear-gradient(to right, #333333, #2c2c2c);
+    position: fixed;
+    right: 0;
+    top: 8vh;
+    display: flex;
+    height: 92vh;
+    width: 30%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: 0.7s;
 }
 
-.NavLinksSidebar_inactive{
-  background-color: #2c2c2c;
-  position: fixed;
-  right: 0;
-  top: 8vh;
-  display: flex;
-  height: 92vh;
-  width: 30%;
-  
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  transform: translateX(100%);
-  transition: 0.7s;
-
+.NavLinksSidebar_inactive {
+    background-color: #2c2c2c;
+    position: fixed;
+    right: 0;
+    top: 8vh;
+    display: flex;
+    height: 92vh;
+    width: 30%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transform: translateX(100%);
+    transition: 0.7s;
 }
 
-.NavButton button{
-  outline: none;
-  display: inline-block;
-  border: none;
-  
-  color: #eeeeee;
-  background-color: #2c2c2c;
-  padding: 14px 16px 8px 18px;
-  border-radius: 3px;
-  transition: 0.7s;
+.NavButton button {
+    cursor: pointer;
+    outline: none;
+    display: inline-block;
+    border: none;
+    color: #eeeeee;
+    background-color: #2c2c2c94;
+    padding: 14px 16px 8px 18px;
+    border-radius: 3px;
+    transition: 0.7s;
 }
 
-.NavButton button:hover{
-  display: inline-block;
-  border: none;
-  color: #eeeeee;
-  background-color: #7575757c;
-  padding:  10px 18px 10px 18px;
-  transition: 0.5s;
+.NavButton button:hover {
+    display: inline-block;
+    border: none;
+    color: #eeeeee;
+    background-color: #7575757c;
+    padding: 10px 18px 10px 18px;
+    transition: 0.5s;
 }
 
-.NavButton button:active{
-  outline: none;
-  display: inline-block;
-  border: none;
-  color: #eeeeee;
-  background-color: #999999;
-  padding:  10px 18px 10px 18px;
-  transition: 0.2s;
+.NavButton button:active {
+    outline: none;
+    display: inline-block;
+    border: none;
+    color: #eeeeee;
+    background-color: #999999;
+    padding: 10px 18px 10px 18px;
+    transition: 0.2s;
+}
+
+.CardContainer {
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(to bottom right, #ecf2ffa4, #d8a7f8a0);
+    width: 200px;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: 5px 10px 8px #0000007c;
+    margin: 5%;
+    transition: all 1s;
+}
+
+.CardContainerActive {
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(to bottom right, #aac6fdda, #d8a4fada);
+    width: 200px;
+    height: 300px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    box-shadow: 5px 10px 8px #0000007c;
+    margin: 5%;
+    transition: all 0.66s;
+}
+
+.CardContainerActive .CardImage img {
+    transition: 1.5s;
+    margin-bottom: 30px;
+}
+
+.CardImage img {
+    position: relative;
+    cursor: pointer;
+    margin-bottom: 30px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 3px;
+    border-color: blanchedalmond;
+    box-shadow: 5px 5px 7px #0000007c;
+}
+
+.CardDetails {
+    align-items: center;
+    justify-content: center;
+    margin: 10%;
+    position: relative;
+    text-shadow: 2px 2px 4px #0000007c;
+}
+
+Body {
+    /*background-image: url(../hatbackground.png);*/
+    background-size: 600px 400px;
+}
+
+.WebBodyContent {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: space-evenly;
+    height: 100vh;
+    width: 100%;
+    padding-bottom: 10vh;
+    background-image: linear-gradient(to bottom right, #31f7f777, #76ffed94);
+}
+
+.WebBodyContent div {
+    display: flex;
 }
